@@ -10,5 +10,6 @@ export(doubles)
 export(dsrwon)
 export(elim)
 export(encode)
+export(initsing)
 export(nameRows)
 export(plautrans)
